[project]
name = "osm-wtp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "diskcache>=5.6.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "starsep-utils>=0.8.0",
    "tqdm>=4.67.1",
]

[tool.vulture]
exclude = ["venv", ".venv"]
ignore_names = ["test*"]
paths = ["."]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.8",
    "vulture>=2.14",
]
