[project]
name = "osm-wtp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "diskcache>=5.6.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "starsep-utils>=0.9.1",
    "tqdm>=4.67.1",
]

[tool.ruff]
extend-exclude = ["whitelist.py"]

[tool.ruff.lint]
extend-select = [
    "B", # flake8-bugbear
    "E", # pycodestyle error
    "F", # pyflakes
    "I", # isort
    "W", # pycodestyle warning
    "UP", # pyupgrade
]
extend-ignore = ["E501"]

[tool.vulture]
exclude = ["venv", ".venv"]
ignore_names = ["test*"]
paths = ["."]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.8",
    "vulture>=2.14",
]
