[project]
name = "osm-wtp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "diskcache>=5.6.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "starsep-utils>=0.9.1",
    "tqdm>=4.67.1",
]

[tool.ruff]
extend-exclude = ["whitelist.py"]

[tool.ruff.lint]
extend-select = ["ALL"]
extend-ignore = [
    "E501", # line length
    "N", # pep8-naming
    "D", # pydocstyle
    "COM", # flake8-commas
    "LOG015", # root-logger-call
    "TD", # flake8-todos
    "FIX002", # Line contains TODO
    "G004", # Logging statement uses f-string
    "C901", # complex-structure
    "PLR2004", # Magic value used in comparison
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
    "S101", # Use of `assert` detected
]

[tool.ty.src]
exclude = ["whitelist.py"]

[tool.vulture]
exclude = ["venv", ".venv"]
ignore_names = ["test*"]
paths = ["."]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.8",
    "vulture>=2.14",
]
